--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   firebase_auth: ^0.6.6
   firebase_core: ^0.2.5
   path_provider: ^0.4.1
-  cloud_firestore: 0.8.2+3
+  cloud_firestore: ^0.8.2+3
 
 
 dev_dependencies:
